letter-spacing correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ img {
   font-size: 18px;
   font-weight: 800;
   line-height: 1.16;
-  letter-spacing: 3%;
+  letter-spacing: 0.54px;
   text-transform: uppercase;
 
   color: var(--dark-accent);
@@ -83,7 +83,6 @@ img {
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
-  /* letter-spacing: 2%; */
 
   color: var(--white-background);
 }
@@ -94,7 +93,7 @@ img {
 
   font-size: 16px;
   font-weight: 500;
-  letter-spacing: 4%;
+  letter-spacing: 0.64px;
 
   color: var(--white-background);
   background-color: var(--primary-brand);
